# onigiri

./: .gitattributes  Cargo.toml  README.md  build.rs  icon.sh
core/: Cargo.toml
core/src/: lib.rs  math.rs  scene.rs
editor/bevy_editor_pls/: Cargo.toml
editor/bevy_editor_pls_core/: Cargo.toml
editor/bevy_editor_pls_core/src/: editor.rs
editor/bevy_editor_pls_default_windows/: Cargo.toml
src/: lib.rs  main.rs  resource.rs
standalone/: Cargo.toml  makefile
standalone/src/: lib.rs  main.rs  utils.rs
