[package]
name = "onigiri"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
build = "build.rs"

[workspace]
members = ["standalone"]

[dependencies]
# egui =  "0.20"
# egui_dock = { path = "editor/egui_dock" }
# eframe = { version = "0.21", default-features = false, features = [
#     # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
#     "default_fonts", # Embed the default egui fonts.
#     "wgpu"
#     # "glow",          # Use the glow rendering backend. Alternative: "wgpu".
#     # "persistence",   # Enable restoring app state when restarting the app.
# ] }

bevy_editor_pls = { path = "editor/bevy_editor_pls" }
bevy = { version="0.9", features = ["x11"] }
# serde = { version = "1", features = ["derive"] }


[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
winres = "0.1.12"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
