[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9" }
# bevy_editor_pls = { path = "../editor/bevy_editor_pls" }
# bevy-inspector-egui = { version = "0.17", default-features = false, features = ["bevy_pbr"] }
# bevy_scene = "0.9"
# nanoserde = "0.1"
# postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"]}
bincode = "1.3"
# serde-binary = "0.5"
# binary-stream = "3.4"
rand="0.8"
# erased-serde = "0.3"
